# Mylib-C

./: .gitignore  LICENSE.md  Makefile.am  README.md  configure.ac
examples/: Makefile.am  bitmatrix_example.c  bitvector_example.c
include/: Makefile.am  Makefile.def  config.h.in  makedef
mylib/: Makefile.am  addstr.aux  addstr.c  addstr.tex  bitmatrix.aux  bitmatrix.c  bitmatrix.tex  bitset.aux  bitset.c  bitset.tex  bitvector.aux  bitvector.c  bitvector.tex  chrono.aux  chrono.c  chrono.tex  extranotes.tex  gdef.aux  gdef.c  gdef.tex  guidemylib.aux  guidemylib.bbl  guidemylib.blg  guidemylib.synctex  guidemylib.tex  guidemylib.toc  guidemylibC.tex  mystr.aux  mystr.c  mystr.tex  num.aux  num.c  num.tex  num2.aux  num2.c  num2.tex  rngstream.c  rngstream.tex  tables.aux  tables.c  (+8 more)
mylib-unit-tests/: Makefile.in  bitmatrix_utest.c  bitmatrix_utest.tex  bitset_utest.c  bitvector_utest.c  bitvector_utest.tex  copyright.tex  guidemylib-utests.tex  mylib_utest.c  mylib_utest.tex  num2_utest.c  num2_utest.tex  num_utest.c  rngstream_utest.c  rngstream_utest.tex  title.tex
unit-tests/: Makefile.am  bitmatrix_utest.c  bitmatrix_utest.tex  bitset_utest.c  bitset_utest.tex  bitvector_utest.c  bitvector_utest.tex  copyright.tex  guideunittests.tex  mylib_utest.c  mylib_utest.tex  num2_utest.c  num2_utest.tex  num_utest.c  num_utest.tex  rngstream_utest.c  rngstream_utest.tex  title.tex  unit.c  unit.tex
